Task 12: create user controller & users html page file (show users list & update file placement)

--- a/ShopmeWebParent/ShopmeBackEnd/src/main/resources/templates/index.html
+++ b/ShopmeWebParent/ShopmeBackEnd/src/main/resources/templates/index.html
@@ -57,6 +57,9 @@
         </div>
     </nav>
 </div>
-<div>Shopme Control Panel - Copyright &copy; Shopme</div>
+<div>
+    <h1>Shopme Control Panel</h1>
+</div>
+<div class="text-center">Shopme Control Panel - Copyright &copy; Shopme</div>
 </body>
 </html>
