--- a/ShopmeWebParent/ShopmeBackEnd/src/main/resources/templates/users/users.html
+++ b/ShopmeWebParent/ShopmeBackEnd/src/main/resources/templates/users/users.html
@@ -59,6 +59,14 @@
 </div>
 <div>
   <h2>Manage Users</h2>
+  <a class="btn btn-primary mb-2" th:href="@{/users/new}">Create New User</a>
+</div>
+
+<div th:if="${username != null}" class="alert alert-success alert-dismissible fade show" role="alert">
+  The User <strong>[[${username}]]</strong> has been saved successfully.
+  <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+    <span aria-hidden="true">&times;</span>
+  </button>
 </div>
 <div class="table-responsive">
   <table class="table table-striped table-bordered table-hover">
@@ -75,7 +83,7 @@
     </tr>
     </thead>
     <tbody>
-    <tr th:each="user :${userList}">
+    <tr th:class="${user.enabled ? 'table-success' :'table-danger'}" th:each="user :${userList}">
       <th scope="row">1</th>
       <td ></td>
       <td th:text="${user.firstName}"></td>
