--- a/ShopmeWebParent/ShopmeBackEnd/src/main/resources/templates/users/users.html
+++ b/ShopmeWebParent/ShopmeBackEnd/src/main/resources/templates/users/users.html
@@ -84,7 +84,7 @@
     </thead>
     <tbody>
     <tr th:class="${user.enabled ? 'table-success' :'table-danger'}" th:each="user :${userList}">
-      <th scope="row">1</th>
+      <th scope="row" th:text="${user.id}">1</th>
       <td ></td>
       <td th:text="${user.firstName}"></td>
       <td th:text="${user.lastName}"></td>
