--- a/ShopmeWebParent/ShopmeBackEnd/src/main/resources/templates/users/user_form.html
+++ b/ShopmeWebParent/ShopmeBackEnd/src/main/resources/templates/users/user_form.html
@@ -1,153 +1,166 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
-  <meta charset="UTF-8">
-  <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-  <title>Create New User</title>
-  <link rel="stylesheet" type="text/css" th:href="@{/webjars/bootstrap/css/bootstrap.min.css}"/>
-  <script type="text/javascript" th:src="@{/webjars/jquery/jquery.min.js}"></script>
-  <script type="text/javascript" th:src="@{/webjars/bootstrap/js/bootstrap.min.js}"></script>
+    <meta charset="UTF-8">
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+    <title>Create New User</title>
+    <link th:rel="stylesheet" th:href="@{/izitoast/css/iziToast.css} "/>
+    <script th:src="@{/izitoast/js/iziToast.min.js}"></script>
+    <link rel="stylesheet" type="text/css" th:href="@{/webjars/bootstrap/css/bootstrap.min.css}"/>
+    <script type="text/javascript" th:src="@{/webjars/jquery/jquery.min.js}"></script>
+    <script type="text/javascript" th:src="@{/webjars/bootstrap/js/bootstrap.min.js}"></script>
 </head>
 <body class="container-fluid">
 <div>
-  <nav class="navbar navbar-expand-lg bg-dark navbar-dark">
-    <a class="navbar-brand" th:href="@{/}">
-      <img th:src="@{/images/ShopmeAdminSmall.png}" alt="shopme"/>
-    </a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#topNavbar">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="topNavbar">
-      <ul class="navbar-nav">
-        <li class="nav-item">
-          <a class="nav-link" th:href="@{/users}">Users</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" th:href="@{/categories}">Categories</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" th:href="@{/brands}">Brands</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" th:href="@{/products}">Products</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" th:href="@{/customers}">Customers</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" th:href="@{/orders}">Orders</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" th:href="@{/shipping}">Shipping</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" th:href="@{/sales-reports}">Sales Report</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" th:href="@{/articles}">Articles</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" th:href="@{/menus}">Menus</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" th:href="@{/settings}">Settings</a>
-        </li>
-      </ul>
-    </div>
-  </nav>
+    <nav class="navbar navbar-expand-lg bg-dark navbar-dark">
+        <a class="navbar-brand" th:href="@{/}">
+            <img th:src="@{/images/ShopmeAdminSmall.png}" alt="shopme"/>
+        </a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#topNavbar">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="topNavbar">
+            <ul class="navbar-nav">
+                <li class="nav-item">
+                    <a class="nav-link" th:href="@{/users}">Users</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" th:href="@{/categories}">Categories</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" th:href="@{/brands}">Brands</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" th:href="@{/products}">Products</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" th:href="@{/customers}">Customers</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" th:href="@{/orders}">Orders</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" th:href="@{/shipping}">Shipping</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" th:href="@{/sales-reports}">Sales Report</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" th:href="@{/articles}">Articles</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" th:href="@{/menus}">Menus</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" th:href="@{/settings}">Settings</a>
+                </li>
+            </ul>
+        </div>
+    </nav>
 </div>
 <div>
-  <h2>Manage Users | Create New User</h2>
-  <form th:action="@{/users}" method="post" th:object="${user}" class="needs-validation" novalidate style="max-width: 700px; margin: 0 auto;">
-    <div class="border border-secondary rounded p-3">
-      <div class="form-row">
-        <div class="form-group col-md-6">
-          <label for="first_name">First Name</label>
-          <input type="text" class="form-control" id="first_name" th:field="*{firstName}" required minlength="2" maxlength="40" placeholder="Enter first name">
-          <div class="invalid-feedback">
-            Please provide a valid first name.
-          </div>
+    <h2>Manage Users | Create New User</h2>
+    <form th:action="@{/users}" method="post" th:object="${user}" style="max-width: 700px; margin: 0 auto;" onsubmit="return checkIsEmailUnique(this);">
+        <div class="border border-secondary rounded p-3">
+            <div class="form-row">
+                <div class="form-group col-md-6">
+                    <label for="first_name">First Name</label>
+                    <input type="text" class="form-control" id="first_name" th:field="*{firstName}" required
+                           minlength="2" maxlength="40" placeholder="Enter first name">
+                    <div class="invalid-feedback">
+                        Please provide a valid first name.
+                    </div>
+                </div>
+                <div class="form-group col-md-6">
+                    <label for="last_name">Last Name</label>
+                    <input type="text" class="form-control" id="last_name" th:field="*{lastName}" required minlength="2"
+                           maxlength="40" placeholder="Enter last name">
+                    <div class="invalid-feedback">
+                        Please provide a valid last name.
+                    </div>
+                </div>
+            </div>
+            <div class="form-group">
+                <label for="email">Email</label>
+                <input type="email" class="form-control" id="email" th:field="*{email}" required minlength="8"
+                       maxlength="128" placeholder="Enter email">
+                <div class="invalid-feedback">
+                    Please provide a valid email.
+                </div>
+            </div>
+            <div class="form-group">
+                <label for="password">Password</label>
+                <input type="password" class="form-control" id="password" th:field="*{password}"
+                       placeholder="Enter password">
+            </div>
+            <div class="form-group">
+                <label>Roles</label>
+                <div class="col-sm-12">
+                    <th:block th:each="role : ${roles}">
+                        <input class="m-2" type="checkbox" th:field="*{roles}" th:text="${role.name}"
+                               th:value="${role.id}"/>-
+                        <smal>[[${role.description}]]</smal>
+                        </br>
+                    </th:block>
+                </div>
+            </div>
+            <div class="form-group">
+                <div class="form-check">
+                    <input class="form-check-input" type="checkbox" th:field="*{enabled}" id="enabled">
+                    <label class="form-check-label" for="enabled">
+                        Enable
+                    </label>
+                </div>
+            </div>
+            <button type="submit" class="btn btn-primary">Save</button>
+            <button type="button" class="btn btn-danger" id="buttonCancel">Cancel</button>
+            <!--      <button type="button" class="btn btn-danger" onclick='javascript:window.history.back()'>Cancel</button>-->
         </div>
-        <div class="form-group col-md-6">
-          <label for="last_name">Last Name</label>
-          <input type="text" class="form-control" id="last_name" th:field="*{lastName}" required minlength="2" maxlength="40" placeholder="Enter last name">
-          <div class="invalid-feedback">
-            Please provide a valid last name.
-          </div>
-        </div>
-      </div>
-      <div class="form-group">
-        <label for="username">Username</label>
-        <input type="text" class="form-control" id="username" th:field="*{username}" required minlength="4" maxlength="40" placeholder="Enter username">
-        <div class="invalid-feedback">
-          Please provide a valid username.
-        </div>
-      </div>
-      <div class="form-group">
-        <label for="email">Email</label>
-        <input type="email" class="form-control" id="email" th:field="*{email}" required minlength="8" maxlength="128" placeholder="Enter email">
-        <div class="invalid-feedback">
-          Please provide a valid email.
-        </div>
-      </div>
-      <div class="form-group">
-        <label for="password">Password</label>
-        <input type="password" class="form-control" id="password" th:field="*{password}" placeholder="Enter password">
-      </div>
-      <div class="form-group">
-        <label>Roles</label>
-        <div class="col-sm-12">
-          <th:block th:each="role : ${roles}">
-            <input class="m-2" type="checkbox" th:field="*{roles}" th:text="${role.name}" th:value="${role.id}" />- <smal>[[${role.description}]]</smal></br>
-          </th:block>
-        </div>
-      </div>
-      <div class="form-group">
-        <div class="form-check">
-          <input class="form-check-input" type="checkbox" th:field="*{enabled}" id="enabled">
-          <label class="form-check-label" for="enabled">
-            Enable
-          </label>
-        </div>
-      </div>
-      <button type="submit" class="btn btn-primary">Save</button>
-      <button type="button" class="btn btn-danger" id="buttonCancel">Cancel</button>
-<!--      <button type="button" class="btn btn-danger" onclick='javascript:window.history.back()'>Cancel</button>-->
-    </div>
 
-  </form>
+    </form>
 </div>
 <div class="text-center">Shopme Control Panel - Copyright &copy; Shopme</div>
 
-
-<script>
-  // Example starter JavaScript for disabling form submissions if there are invalid fields
-  (function() {
-    'use strict';
-    window.addEventListener('load', function() {
-      // Fetch all the forms we want to apply custom Bootstrap validation styles to
-      var forms = document.getElementsByClassName('needs-validation');
-      // Loop over them and prevent submission
-      var validation = Array.prototype.filter.call(forms, function(form) {
-        form.addEventListener('submit', function(event) {
-          if (form.checkValidity() === false) {
-            event.preventDefault();
-            event.stopPropagation();
-          }
-          form.classList.add('was-validated');
-        }, false);
-      });
-    }, false);
-  })();
-</script>
-
 <script type="text/javascript">
-  $(document).ready(function() {
-    $("#buttonCancel").on("click", function(){
-      window.location= "[[@{/users}]]"
+    $(document).ready(function () {
+        $("#buttonCancel").on("click", function () {
+            window.location = "[[@{/users}]]"
+        });
     });
-  });
+
+    function checkIsEmailUnique(form) {
+        url = "[[@{/users/check-email}]]";
+        userEmail = $("#email").val();
+        csrf = $("input[name='_csrf']").val();
+        params = {email: userEmail, _csrf: csrf};
+        $.post(url, params, function (response) {
+            console.log(response)
+            if (response == "OK") {
+                form.submit();
+            } else if (response == "Duplicated") {
+                iziToast.show({
+                    timeout: 20000,
+                    title: 'Error',
+                    message: 'There is another user having same email: ' + userEmail,
+                    position: 'bottomCenter',
+                    timeout: 500000,
+                    color: 'red'
+                });
+            }
+
+        }).fail(function () {
+            iziToast.show({
+                title: 'Error',
+                message: 'Could not connect to server',
+                position: 'bottomCenter',
+                timeout: 500000,
+                color: 'red'
+            });
+        })
+
+        return false
+    }
 </script>
 </body>
 </html>
