--- a/ShopmeWebParent/ShopmeBackEnd/src/main/resources/templates/users/users.html
+++ b/ShopmeWebParent/ShopmeBackEnd/src/main/resources/templates/users/users.html
@@ -62,8 +62,8 @@
   <a class="btn btn-primary mb-2" th:href="@{/users/new}">Create New User</a>
 </div>
 
-<div th:if="${username != null}" class="alert alert-success alert-dismissible fade show" role="alert">
-  The User <strong>[[${username}]]</strong> has been saved successfully.
+<div th:if="${email != null}" class="alert alert-success alert-dismissible fade show" role="alert">
+  The User with email: <strong>[[${email}]]</strong> has been saved successfully.
   <button type="button" class="close" data-dismiss="alert" aria-label="Close">
     <span aria-hidden="true">&times;</span>
   </button>
@@ -76,7 +76,6 @@
       <th scope="col">Photo</th>
       <th scope="col">First Name</th>
       <th scope="col">Last Name</th>
-      <th scope="col">Username</th>
       <th scope="col">Roles</th>
       <th scope="col">Enabled</th>
       <th scope="col">Action</th>
@@ -88,7 +87,6 @@
       <td ></td>
       <td th:text="${user.firstName}"></td>
       <td th:text="${user.lastName}"></td>
-      <td th:text="${user.username}"></td>
       <td th:text="${user.roles}"></td>
       <td th:text="${user.enabled}"></td>
       <td >
@@ -103,7 +101,6 @@
       <th scope="col">Photo</th>
       <th scope="col">First Name</th>
       <th scope="col">Last Name</th>
-      <th scope="col">Username</th>
       <th scope="col">Roles</th>
       <th scope="col">Enabled</th>
       <th scope="col">Action</th>
