--- a/ShopmeWebParent/ShopmeBackEnd/src/main/resources/templates/users/user_form.html
+++ b/ShopmeWebParent/ShopmeBackEnd/src/main/resources/templates/users/user_form.html
@@ -7,6 +7,7 @@
     <title>Create New User</title>
     <link th:rel="stylesheet" th:href="@{/izitoast/css/iziToast.css} "/>
     <script th:src="@{/izitoast/js/iziToast.min.js}"></script>
+    <link rel="stylesheet" type="text/css" th:href="@{/fontawesome/css/all.css}"/>
     <link rel="stylesheet" type="text/css" th:href="@{/webjars/bootstrap/css/bootstrap.min.css}"/>
     <script type="text/javascript" th:src="@{/webjars/jquery/jquery.min.js}"></script>
     <script type="text/javascript" th:src="@{/webjars/bootstrap/js/bootstrap.min.js}"></script>
@@ -113,8 +114,8 @@
                     </label>
                 </div>
             </div>
-            <button type="submit" class="btn btn-primary">Save</button>
-            <button type="button" class="btn btn-danger" id="buttonCancel">Cancel</button>
+            <button type="submit" class="btn btn-primary">Save <i class="fas fa-save"></i></button>
+            <button type="button" class="btn btn-danger" id="buttonCancel">Cancel <i class="fas fa-times-circle"></i></button>
             <!--      <button type="button" class="btn btn-danger" onclick='javascript:window.history.back()'>Cancel</button>-->
         </div>
 
