--- a/ShopmeWebParent/ShopmeBackEnd/src/main/resources/templates/users/users.html
+++ b/ShopmeWebParent/ShopmeBackEnd/src/main/resources/templates/users/users.html
@@ -65,8 +65,7 @@
   <a class="btn btn-primary mb-2" th:href="@{/users/new}">Create New User <i class="fas fa-plus"></i></a>
 </div>
 
-<div th:if="${email != null}" class="alert alert-success alert-dismissible fade show" role="alert">
-  The User with email: <strong>[[${email}]]</strong> has been saved successfully.
+<div th:if="${message != null}" class="alert alert-success alert-dismissible fade show" role="alert" th:utext="${message}">
   <button type="button" class="close" data-dismiss="alert" aria-label="Close">
     <span aria-hidden="true">&times;</span>
   </button>
@@ -92,11 +91,11 @@
       <td th:text="${user.lastName}"></td>
       <td th:text="${user.roles}"></td>
       <td class="text-center">
-        <a th:href="@{/}" th:if="${user.enabled == true}" class="fas fa-check-circle fa-2x icon-dark"></a>
-        <a th:href="@{/}" th:if="${user.enabled == false}" class="fas fa-times-circle fa-2x icon-dark"></a>
+        <a th:href="@{/}" type="button" th:if="${user.enabled == true}" title="edit this user" class="fas fa-check-circle fa-2x icon-dark"></a>
+        <a th:href="@{/}" type="button" th:if="${user.enabled == false}" class="fas fa-times-circle fa-2x icon-dark"></a>
       </td>
       <td class="text-center">
-        <button type="button" class="btn btn-success">Update <i class="fas fa-pencil-alt"></i></button>
+        <a th:href="@{'/users/'+${user.id}+ '/edit'}" type="button" class="btn btn-success">Update <i class="fas fa-pencil-alt"></i></a>
         <button type="button" class="btn btn-danger">Delete <i class="fas fa-trash-alt"></i></button>
       </td>
     </tr>
