--- a/ShopmeWebParent/ShopmeBackEnd/src/main/resources/templates/users/users.html
+++ b/ShopmeWebParent/ShopmeBackEnd/src/main/resources/templates/users/users.html
@@ -9,6 +9,9 @@
   <link rel="stylesheet" type="text/css" th:href="@{/webjars/bootstrap/css/bootstrap.min.css}"/>
   <link rel="stylesheet" type="text/css" th:href="@{style.css}"/>
 
+  <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+
+
   <script type="text/javascript" th:src="@{/webjars/jquery/jquery.min.js}"></script>
   <script type="text/javascript" th:src="@{/webjars/bootstrap/js/bootstrap.min.js}"></script>
 </head>
@@ -96,7 +99,7 @@
       </td>
       <td class="text-center">
         <a th:href="@{'/users/'+${user.id}+ '/edit'}" type="button" class="btn btn-success">Update <i class="fas fa-pencil-alt"></i></a>
-        <button type="button" class="btn btn-danger">Delete <i class="fas fa-trash-alt"></i></button>
+        <a th:href="@{'/users/'+${user.id}}" th:userId="${user.id}" type="button" class="btn btn-danger link-delete">Delete <i class="fas fa-trash-alt"></i></a>
       </td>
     </tr>
     </tbody>
@@ -113,6 +116,40 @@
     </tfoot>
   </table>
 </div>
+
+<div class="modal fade text-center" id="confirmModal">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h4 class="modal-title">Delete Confirmation</h4>
+        <button type="button" class="close" data-dismiss="modal">&times;</button>
+      </div>
+
+      <div class="modal-body">
+        <span id="confirmText"></span>
+      </div>
+
+      <div class="modal-footer">
+        <a class="btn btn-success" href="" id="yesButton">Yes</a>
+        <button type="button" class="btn btn-danger" data-dismiss="modal">No</button>
+      </div>
+    </div>
+  </div>
+</div>
+
 <div class="text-center">Shopme Control Panel - Copyright &copy; Shopme</div>
+
+<script type="text/javascript">
+  $(document).ready(function(){
+    $('.link-delete').on("click",function(e){
+      e.preventDefault();
+      link=$(this);
+      userId=link.attr("userId");
+      $('#yesButton').attr('href',link.attr('href'))
+      $('#confirmText').text("Are you sure you want to delete this user id" + userId +"?");
+      $('#confirmModal').modal();
+    });
+  });
+</script>
 </body>
 </html>
