--- a/ShopmeWebParent/ShopmeBackEnd/src/main/resources/templates/users/user_form.html
+++ b/ShopmeWebParent/ShopmeBackEnd/src/main/resources/templates/users/user_form.html
@@ -63,7 +63,7 @@
 <div>
     <h2>Manage Users | [[${pageTitle}]]</h2>
     <form th:action="@{/users}" method="post" th:object="${user}" style="max-width: 700px; margin: 0 auto;"
-          onsubmit="return checkIsEmailUnique(this);">
+          onsubmit="return checkIsEmailUnique(this);" enctype="multipart/form-data">
         <input type="hidden" th:field="*{id}">
         <div class="border border-secondary rounded p-3">
             <div class="form-row">
@@ -94,9 +94,11 @@
             </div>
             <div class="form-group">
                 <label for="password">Password</label>
-                <input type="password" class="form-control" id="password" minlength="8" maxlength="20" required th:field="*{password}" th:if="${user.id == null}"
+                <input type="password" class="form-control" id="password" minlength="8" maxlength="20" required
+                       th:field="*{password}" th:if="${user.id == null}"
                        placeholder="Enter password">
-                <input type="password" class="form-control" id="password" minlength="8" maxlength="20" th:field="*{password}" th:if="${user.id != null}"
+                <input type="password" class="form-control" id="password" minlength="8" maxlength="20"
+                       th:field="*{password}" th:if="${user.id != null}"
                        placeholder="Enter password">
             </div>
             <div class="form-group">
@@ -105,9 +107,18 @@
                     <th:block th:each="role : ${roles}">
                         <input class="m-2" type="checkbox" th:field="*{roles}" th:text="${role.name}"
                                th:value="${role.id}"/>-
-                        <smal>[[${role.description}]]</smal>
+                        <small>[[${role.description}]]</small>
                         </br>
                     </th:block>
+                </div>
+            </div>
+            <div class="form-group">
+                <label>Photo:</label>
+                <div class="col-sm-8">
+                    <input type="hidden" th:field="${photo}"/>
+                    <input type="file" id="fileImage" name="image" accept="image/png, image/jpeg" class="m-2"/>
+                    <img th:src="@{${user.photosPath}}" id="thumbnail"
+                         class="img-fluid img-thumbnail rounded" width="100"/>
                 </div>
             </div>
             <div class="form-group">
@@ -133,7 +144,27 @@
         $("#buttonCancel").on("click", function () {
             window.location = "[[@{/users}]]"
         });
+
+        $('#fileImage').change(function () {
+            fileSize = this.files[0].size;
+            if (fileSize > 1048576) {
+                this.setCustomValidity("You must choose an image less then 1MB!");
+                this.reportValidity();
+            } else {
+                this.setCustomValidity("");
+                showImageThumbnail(this)
+            }
+        });
     });
+
+    function showImageThumbnail(fileInput) {
+        let file = fileInput.files[0];
+        let reader = new FileReader();
+        reader.onload = function (e) {
+            $('#thumbnail').attr("src", e.target.result);
+        }
+        reader.readAsDataURL(file);
+    }
 
     function checkIsEmailUnique(form) {
         url = "[[@{/users/check-email}]]";
