--- a/ShopmeWebParent/ShopmeBackEnd/src/main/resources/templates/users/users.html
+++ b/ShopmeWebParent/ShopmeBackEnd/src/main/resources/templates/users/users.html
@@ -80,10 +80,55 @@
         <tr>
             <th scope="col">ID</th>
             <th scope="col">Photo</th>
-            <th scope="col">First Name</th>
-            <th scope="col">Last Name</th>
+            <th scope="col">
+                <a
+                        th:if="${sortField} != 'firstName'"
+                        th:href="@{'/users/page/'+ ${currentPage} + '?sortField=firstName' + '&sortDirection='+${sortDirection}}"
+                        class="text-white"
+                >First Name</a>
+                <a
+                        th:if="${sortField} == 'firstName'"
+                        th:href="@{'/users/page/'+ ${currentPage} + '?sortField=firstName' + '&sortDirection='+${reverseSortDirection}}"
+                        class="text-white"
+                >First Name</a>
+                <span
+                        th:if="${sortField} == 'firstName'"
+                        th:class="${sortDirection == 'asc' ? 'fa fa-sort-up' : 'fa fa-sort-down'}"
+                > </span>
+            </th>
+            <th scope="col">
+                <a
+                        th:if="${sortField} != 'lastName'"
+                        th:href="@{'/users/page/'+ ${currentPage} + '?sortField=lastName' + '&sortDirection='+${sortDirection}}"
+                        class="text-white"
+                >First Name</a>
+                <a
+                        th:if="${sortField} == 'lastName'"
+                        th:href="@{'/users/page/'+ ${currentPage} + '?sortField=lastName' + '&sortDirection='+${reverseSortDirection}}"
+                        class="text-white"
+                >Last Name</a>
+                <span
+                        th:if="${sortField} == 'lastName'"
+                        th:class="${sortDirection == 'asc' ? 'fa fa-sort-up' : 'fa fa-sort-down'}"
+                > </span>
+            </th>
             <th scope="col">Roles</th>
-            <th scope="col">Enabled</th>
+            <th scope="col">
+                <a
+                        th:if="${sortField} != 'enabled'"
+                        th:href="@{'/users/page/'+ ${currentPage} + '?sortField=enabled' + '&sortDirection='+${sortDirection}}"
+                        class="text-white"
+                >Enabled</a>
+                <a
+                        th:if="${sortField} == 'enabled'"
+                        th:href="@{'/users/page/'+ ${currentPage} + '?sortField=enabled' + '&sortDirection='+${reverseSortDirection}}"
+                        class="text-white"
+                >First Name</a>
+                <span
+                        th:if="${sortField} == 'enabled'"
+                        th:class="${sortDirection == 'asc' ? 'fa fa-sort-up' : 'fa fa-sort-down'}"
+                > </span>
+            </th>
             <th scope="col">Action</th>
         </tr>
         </thead>
@@ -133,11 +178,21 @@
 <div>
     <nav aria-label="Page navigation example">
         <ul class="pagination justify-content-center">
-            <li th:class="${currentPage > 1 ? 'page-item' :'page-item disabled'}"><a class="page-link" th:href="@{'/users/page/1'}">First</a></li>
-            <li th:class="${currentPage > 1 ? 'page-item' :'page-item disabled'}"><a class="page-link" th:href="@{'/users/page/'+ ${currentPage - 1}}">Previous</a></li>
-            <li th:class="${currentPage != i ? 'page-item' : 'page-item active'}" th:each="i : ${#numbers.sequence(1,totalPages)}"><a class="page-link" th:href="@{'/users/page/' + ${i}}">[[${i}]]</a></li>
-            <li th:class="${currentPage < totalPages ? 'page-item' :'page-item disabled'}"><a class="page-link" th:href="@{'/users/page/' + ${currentPage + 1}}">Next</a></li>
-            <li th:class="${currentPage < totalPages ? 'page-item' :'page-item disabled'}"><a class="page-link" th:href="@{'/users/page/' + ${totalPages}}">Last</a></li>
+            <li th:class="${currentPage > 1 ? 'page-item' :'page-item disabled'}"><a class="page-link"
+                                                                                     th:href="@{'/users/page/1' + '?sortField=enabled' + '&sortDirection='+${sortDirection}}">First</a>
+            </li>
+            <li th:class="${currentPage > 1 ? 'page-item' :'page-item disabled'}"><a class="page-link"
+                                                                                     th:href="@{'/users/page/'+ ${currentPage - 1} + '?sortField=enabled' + '&sortDirection='+${sortDirection}}">Previous</a>
+            </li>
+            <li th:class="${currentPage != i ? 'page-item' : 'page-item active'}"
+                th:each="i : ${#numbers.sequence(1,totalPages)}"><a class="page-link"
+                                                                    th:href="@{'/users/page/' + ${i} + '?sortField=enabled' + '&sortDirection='+${sortDirection}}">[[${i}]]</a></li>
+            <li th:class="${currentPage < totalPages ? 'page-item' :'page-item disabled'}"><a class="page-link"
+                                                                                              th:href="@{'/users/page/' + ${currentPage + 1} + '?sortField=enabled' + '&sortDirection='+${sortDirection}}">Next</a>
+            </li>
+            <li th:class="${currentPage < totalPages ? 'page-item' :'page-item disabled'}"><a class="page-link"
+                                                                                              th:href="@{'/users/page/' + ${totalPages} + '?sortField=enabled' + '&sortDirection='+${sortDirection}}">Last</a>
+            </li>
         </ul>
     </nav>
 </div>
