Task 26: refector  (heading, page link freagments & show affected user after update)

--- a/ShopmeWebParent/ShopmeBackEnd/src/main/resources/templates/users/user_form.html
+++ b/ShopmeWebParent/ShopmeBackEnd/src/main/resources/templates/users/user_form.html
@@ -105,8 +105,7 @@
                 <label>Roles</label>
                 <div class="col-sm-12">
                     <th:block th:each="role : ${roles}">
-                        <input class="m-2" type="checkbox" th:field="*{roles}" th:text="${role.name}"
-                               th:value="${role.id}"/>-
+                        <input class="m-2" type="checkbox" th:field="*{roles}" th:text="${role.name}" th:value="${role.id}"/>-
                         <small>[[${role.description}]]</small>
                         </br>
                     </th:block>
