--- a/ShopmeWebParent/ShopmeBackEnd/src/main/resources/templates/users/users.html
+++ b/ShopmeWebParent/ShopmeBackEnd/src/main/resources/templates/users/users.html
@@ -66,9 +66,12 @@
 <div>
     <h2>Manage Users</h2>
     <a class="btn btn-primary mb-2" th:href="@{/users/new}">Create New User <i class="fas fa-plus"></i></a>
-    <a class="btn btn-primary mb-2" th:href="@{/users/export/csv}" data-toggle="tooltip" data-placement="top" title="Export To CSV"><i class="fa fa-file-csv"></i></a>
-    <a class="btn btn-primary mb-2" th:href="@{/users/export/excel}" data-toggle="tooltip" data-placement="top" title="Export To Excel"><i class="fa fa-file-excel"></i></a>
-    <a class="btn btn-primary mb-2" th:href="@{/users/export/pdf}" data-toggle="tooltip" data-placement="top" title="Export To PDF"><i class="fa fa-file-pdf"></i></a>
+    <a class="btn btn-primary mb-2" th:href="@{/users/export/csv}" data-toggle="tooltip" data-placement="top"
+       title="Export To CSV"><i class="fa fa-file-csv"></i></a>
+    <a class="btn btn-primary mb-2" th:href="@{/users/export/excel}" data-toggle="tooltip" data-placement="top"
+       title="Export To Excel"><i class="fa fa-file-excel"></i></a>
+    <a class="btn btn-primary mb-2" th:href="@{/users/export/pdf}" data-toggle="tooltip" data-placement="top"
+       title="Export To PDF"><i class="fa fa-file-pdf"></i></a>
 </div>
 
 <div th:if="${message != null}" class="alert alert-success alert-dismissible fade show" role="alert"
@@ -83,26 +86,28 @@
         <input type="hidden" name="sortDirection" th:value="${sortDirection}"/>
         <label for="filter">Filter: &nbsp; </label>
         <input type="search" name="keyword" id="filter" class="form-control">&nbsp;&nbsp;
-        <input type="submit" value="Search" class="btn btn-primary"/>&nbsp;
-        <input type="button" value="Clear" class="btn btn-secondary" onclick="clearFilter()"/>
+        <input type="submit" value="Search" class="btn btn-primary mt-1"/>&nbsp;
+        <input type="button" value="Clear" class="btn btn-secondary mt-1" onclick="clearFilter()"/>
     </form>
 </div>
-<div class="table-responsive">
+<div class="table-responsive full-details">
     <table class="table table-striped table-bordered table-hover">
         <thead class="thead-dark">
         <tr>
-            <th scope="col" th:replace="fragments :: column_link('id', 'ID')"/>
+            <th class="hideable-column">
+            <th scope="col" th:replace="fragments :: column_link('id', 'ID', 'tag')"/>
+            </th>
             <th scope="col">Photo</th>
-            <th scope="col" th:replace="fragments :: column_link('firstName', 'First Name')"/>
-            <th scope="col" th:replace="fragments :: column_link('lastName', 'Last Name')"/>
+            <th scope="col" th:replace="fragments :: column_link('firstName', 'First Name' ,'none')"/>
+            <th scope="col" th:replace="fragments :: column_link('lastName', 'Last Name' ,'none')"/>
             <th scope="col">Roles</th>
-            <th scope="col" th:replace="fragments :: column_link('enabled', 'Enabled')"/>
+            <th scope="col" th:replace="fragments :: column_link('enabled', 'Enabled' ,'none')"/>
             <th scope="col">Action</th>
         </tr>
         </thead>
         <tbody>
         <tr th:class="${user.enabled ? 'table-success' :'table-danger'}" th:each="user :${userList}">
-            <th scope="row" th:text="${user.id}">1</th>
+            <th scope="row" class="hideable-column" th:text="${user.id}">1</th>
             <td><img th:if="${user.photo != null}" th:src="@{${user.photosPath}}" style="width: 100px"
                      class="img-fluid img-thumbnail rounded"></td>
             <td th:text="${user.firstName}"></td>
@@ -136,6 +141,34 @@
     </table>
 </div>
 
+<div class="less-details">
+    <div th:each="user : ${userList}" class="row m-1">
+        <div class="col-4">
+            <img th:if="${user.photo != null}" th:src="@{${user.photosPath}}" style="width: 100px"
+                 class="img-fluid img-thumbnail rounded">
+        </div>
+        <div class="col-8">
+            <div>[[${user.fullName}]]</div>
+            <div>[[${user.roles}]]</div>
+            <div class="mt-2">
+                <a th:href="@{'/users/'+ ${user.id} +'/enabled/false'}" type="button" th:if="${user.enabled == true}"
+                   title="edit this user" class="fas fa-check-circle fa-2x icon-dark"></a>
+                <a th:href="@{'/users/'+ ${user.id} +'/enabled/true'}" type="button" th:if="${user.enabled == false}"
+                   class="fas fa-times-circle fa-2x icon-dark"></a>
+                <div class="text-center">
+                    &nbsp;
+                    <a th:href="@{'/users/'+${user.id}+ '/edit'}" type="button" class="btn btn-success">Update <i
+                            class="fas fa-pencil-alt"></i></a>
+                    &nbsp;
+                    <a th:href="@{'/users/'+${user.id}}" th:userId="${user.id}" type="button"
+                       class="btn btn-danger link-delete">Delete <i class="fas fa-trash-alt mt-1"></i></a>
+                </div>
+            </div>
+        </div>
+        <div>&nbsp;</div>
+    </div>
+</div>
+
 <div class="text-center" th:if="${totalElements > 0}">
     <p>Shwoing users # [[${startCount}]] to [[${endCount}]] of [[${totalElements}]]</p>
 </div>
@@ -145,7 +178,7 @@
 
 <div th:if="${totalPages > 1}">
     <nav aria-label="Page navigation example">
-        <ul class="pagination justify-content-center">
+        <ul class="pagination justify-content-center flex-wrap">
             <li th:class="${currentPage > 1 ? 'page-item' :'page-item disabled'}">
                 <a class="page-link" th:replace="fragments :: page_link(1,'First')"/>
             </li>
