--- a/ShopmeWebParent/ShopmeBackEnd/src/main/resources/templates/index.html
+++ b/ShopmeWebParent/ShopmeBackEnd/src/main/resources/templates/index.html
@@ -1,10 +1,14 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
+<html lang="en"
+      xmlns:th="http://www.thymeleaf.org"
+      xmlns:sec="http://www.thymeleaf.org/thymeleaf-extars-springsecurity5"
+>
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <title>Shopme Admin Control Panel</title>
+    <link rel="stylesheet" type="text/css" th:href="@{/fontawesome/css/all.css}"/>
     <link rel="stylesheet" type="text/css" th:href="@{/webjars/bootstrap/css/bootstrap.min.css}"/>
     <script type="text/javascript" th:src="@{/webjars/jquery/jquery.min.js}"></script>
     <script type="text/javascript" th:src="@{/webjars/bootstrap/js/bootstrap.min.js}"></script>
@@ -52,6 +56,17 @@
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" th:href="@{/settings}">Settings</a>
+                </li>
+                <li class="nav-item">
+                    <span class="fa fa-user fa-2x text-success"></span>
+                </li>
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" data-toggle="dropdown"
+                       th:href="@{/account}"
+                       sec:authentication="principal.fullName"></a>
+                    <div class="dropdown-menu">
+                        <a class="dropdown-item" id="logoutLink" href="">Logout</a>
+                    </div>
                 </li>
             </ul>
         </div>
