--- a/ShopmeWebParent/ShopmeBackEnd/src/main/resources/templates/index.html
+++ b/ShopmeWebParent/ShopmeBackEnd/src/main/resources/templates/index.html
@@ -15,6 +15,9 @@
 </head>
 <body class="container-fluid">
 <div>
+    <form th:action="@{/logout}" method="post" th:hidden="true" name="logoutForm">
+        <input type="submit"/>
+    </form>
     <nav class="navbar navbar-expand-lg bg-dark navbar-dark">
         <a class="navbar-brand" th:href="@{/}">
             <img th:src="@{/images/ShopmeAdminSmall.png}" alt="shopme"/>
@@ -65,7 +68,7 @@
                        th:href="@{/account}"
                        sec:authentication="principal.fullName"></a>
                     <div class="dropdown-menu">
-                        <a class="dropdown-item" id="logoutLink" href="">Logout</a>
+                        <a class="dropdown-item" id="logoutLink" th:href="@{/logout}">Logout</a>
                     </div>
                 </li>
             </ul>
@@ -76,5 +79,13 @@
     <h1>Shopme Control Panel</h1>
 </div>
 <div class="text-center">Shopme Control Panel - Copyright &copy; Shopme</div>
+<script type="text/javascript">
+    $(document).ready(function(){
+        $('#logoutLink').on("click", function(e){
+            e.preventDefault()
+            document.logoutForm.submit();
+        })
+    })
+</script>
 </body>
 </html>
