--- a/ShopmeWebParent/ShopmeBackEnd/src/main/resources/templates/users/users.html
+++ b/ShopmeWebParent/ShopmeBackEnd/src/main/resources/templates/users/users.html
@@ -1,68 +1,8 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-    <title>Shopme Admin Control Panel</title>
-    <link rel="stylesheet" type="text/css" th:href="@{/fontawesome/css/all.css}"/>
-    <link rel="stylesheet" type="text/css" th:href="@{/webjars/bootstrap/css/bootstrap.min.css}"/>
-    <link rel="stylesheet" type="text/css" th:href="@{style.css}"/>
-
-    <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-
-
-    <script type="text/javascript" th:src="@{/webjars/jquery/jquery.min.js}"></script>
-    <script type="text/javascript" th:src="@{/webjars/bootstrap/js/bootstrap.min.js}"></script>
-</head>
+<head th:replace="fragments :: page_header('index')" />
 <body class="container-fluid">
-<div>
-    <nav class="navbar navbar-expand-lg bg-dark navbar-dark">
-        <a class="navbar-brand" th:href="@{/}">
-            <img th:src="@{/images/ShopmeAdminSmall.png}" alt="shopme"/>
-        </a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#topNavbar">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="topNavbar">
-            <ul class="navbar-nav">
-                <li class="nav-item">
-                    <a class="nav-link" th:href="@{/users}">Users</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" th:href="@{/categories}">Categories</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" th:href="@{/brands}">Brands</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" th:href="@{/products}">Products</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" th:href="@{/customers}">Customers</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" th:href="@{/orders}">Orders</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" th:href="@{/shipping}">Shipping</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" th:href="@{/sales-reports}">Sales Report</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" th:href="@{/articles}">Articles</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" th:href="@{/menus}">Menus</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" th:href="@{/settings}">Settings</a>
-                </li>
-            </ul>
-        </div>
-    </nav>
-</div>
+<div th:replace="navigation ::  menu"/>
 <div>
     <h2>Manage Users</h2>
     <a class="btn btn-primary mb-2" th:href="@{/users/new}">Create New User <i class="fas fa-plus"></i></a>
@@ -218,7 +158,7 @@
     </div>
 </div>
 
-<div class="text-center">Shopme Control Panel - Copyright &copy; Shopme</div>
+<div class="text-center" th:replace="fragments :: footer" />
 
 <script type="text/javascript">
     $(document).ready(function () {
