Task 38: refactor #3 (common js forms)

--- a/ShopmeWebParent/ShopmeBackEnd/src/main/resources/templates/navigation.html
+++ b/ShopmeWebParent/ShopmeBackEnd/src/main/resources/templates/navigation.html
@@ -75,7 +75,7 @@
                 </li>
                 </th:block>
                 <li class="nav-item">
-                    <span class="fa fa-circle fa-1x text-success mt-3"></span>
+                    <span class="fa fa-circle fa-1x text-success" style="margin-top: 12px;"></span>
                 </li>
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" data-toggle="dropdown"
