--- a/ShopmeWebParent/ShopmeBackEnd/src/main/resources/templates/account/account_form.html
+++ b/ShopmeWebParent/ShopmeBackEnd/src/main/resources/templates/account/account_form.html
@@ -79,31 +79,7 @@
 <div class="text-center" th:replace="fragments :: footer"/>
 
 <script type="text/javascript">
-    $(document).ready(function () {
-        $("#buttonCancel").on("click", function () {
-            window.location = "[[@{/users}]]"
-        });
-
-        $('#fileImage').change(function () {
-            fileSize = this.files[0].size;
-            if (fileSize > 1048576) {
-                this.setCustomValidity("You must choose an image less then 1MB!");
-                this.reportValidity();
-            } else {
-                this.setCustomValidity("");
-                showImageThumbnail(this)
-            }
-        });
-    });
-
-    function showImageThumbnail(fileInput) {
-        let file = fileInput.files[0];
-        let reader = new FileReader();
-        reader.onload = function (e) {
-            $('#thumbnail').attr("src", e.target.result);
-        }
-        reader.readAsDataURL(file);
-    }
+    moduleURL = "[[@{/}]]";
 
     function checkPasswordMatch(confirmPassword) {
         if (confirmPassword.value != $("#password").val()) {
@@ -113,5 +89,6 @@
         }
     }
 </script>
+<script th:src="@{/js/common_form.js}"></script>
 </body>
 </html>
